# RoChatPlus

./: CMakeLists.txt  README.md  build.ps1  default.project.json
.github/: copilot-instructions.md
.github/workflows/: build.yml
assets/icons/: CONFIG.txt
include/: constants.h  types.h
src/: chatwidget.cpp  chatwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  networkclient.cpp  networkclient.h
src/client/: init.lua
src/moderation/: linkvalidator.cpp  linkvalidator.h  moderationengine.cpp  moderationengine.h
src/resources/: resources.qrc
src/server/: init.lua
src/shared/: Constants.lua  Types.lua
